# tw-hooks

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  greetings.yml
misc/: logo_attribution.md
tests/: conftest.py  test_correct_tag_names.py  test_stdin_parsing.py
tests/test_data/: invalid_unicode_chars.txt
tw_hooks/: __init__.py  hook_delegate.py  hook_shim.py  types.py  utils.py
tw_hooks/base_hooks/: __init__.py  base_hook.py  on_add_hook.py  on_exit_hook.py  on_launch_hook.py  on_modify_hook.py
tw_hooks/hooks/: __init__.py  auto_tag_based_on_tags.py  correct_tag_names.py  detect_mutually_exclusive_tags.py  git_commit.py  handle_tag_bundles.py  post_latest_start_to_i3_status.py  warn_on_task_congestion.py
tw_hooks/scripts/: install_hook_shims.py  install_tw_hook_shims.py  register_hooks.py
